k8s/apps/jellyfin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - jellyfin.home.arpa
      secretName: home-arpa-tls
  rules:
    - host: jellyfin.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
